--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "typeface-poppins": "0.0.72",
+        "typeface-roboto": "0.0.75",
         "vue-template-compiler": "^2.6.11"
     }
 }
