--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "darryldecode/cart": "^4.2",
         "davejamesmiller/laravel-breadcrumbs": "^5.3",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.7",
