add connection to old database

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_OLD_CONNECTION=old_mysql
+DB_OLD_HOST=
+DB_OLD_PORT=
+DB_OLD_DATABASE=
+DB_OLD_USERNAME=
+DB_OLD_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
