minor improvements & to-do list

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Barocco
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
-APP_URL=barocco.by
+APP_URL=https://barocco.by
 
 LOG_CHANNEL=stack
 
