--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/default-089/laravel-medialibrary.git"
+        }
+    ],
     "require": {
         "php": "^7.3",
         "darryldecode/cart": "^4.2",
@@ -21,7 +27,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-medialibrary": "^8.10"
+        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
