--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ DB_OLD_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
