--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@fancyapps/fancybox": "^3.5.7",
         "axios": "^0.19",
-        "bootstrap": "^4.5.2",
-        "browser-sync": "^2.26.12",
+        "bootstrap": "^4.5.3",
+        "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
         "jscroll": "^2.4.1",
-        "laravel-mix": "^5.0.7",
+        "laravel-mix": "^5.0.9",
         "lodash": "^4.17.20",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.27.0",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.29.0",
         "sass-loader": "^8.0.0",
         "slick-carousel": "^1.8.1",
         "typeface-poppins": "0.0.72",
