--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3",
-        "spatie/laravel-searchable": "^1.9"
+        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
