--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CERTIFICATE_PATH=
+TELEGRAM_BOT_CHAT_ID_FOR_ERRORS=
+TELEGRAM_ASYNC_REQUESTS=false
