--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,9 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Deliveries\\": "app/Models/Deliveries/",
+            "Payments\\": "app/Models/Payments/"
         }
     },
     "autoload-dev": {
