admin config in ENV

--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,6 @@ TELEGRAM_BOT_TOKEN=
 TELEGRAM_CERTIFICATE_PATH=
 TELEGRAM_BOT_CHAT_ID_FOR_ERRORS=
 TELEGRAM_ASYNC_REQUESTS=false
+
+ADMIN_ROUTE_PREFIX=admin
+ADMIN_HTTPS=true
