--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,15 @@
-RewriteEngine on 
+RewriteEngine on
 
 RewriteCond %{HTTP_HOST} ^(www.)?barocco.by$
 
-RewriteCond %{REQUEST_URI} !^/public/ 
+RewriteCond %{REQUEST_URI} !^/public/
 
-RewriteCond %{REQUEST_FILENAME} !-f 
-RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
-RewriteRule ^(.*)$ /public/$1 
-RewriteCond %{HTTP_HOST} ^(www.)?barocco.by$ 
+RewriteRule ^(.*)$ /public/$1
+RewriteCond %{HTTP_HOST} ^(www.)?barocco.by$
 RewriteRule ^(/)?$ public/index.php [L]
+
+php_value upload_max_filesize 256M
+php_value post_max_size 256M
