--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "predis/predis": "^1.1",
+        "sentry/sentry-laravel": "^2.7",
         "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3"
     },
     "require-dev": {
