--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,13 +12,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
         php-version: '7.3'
     - uses: actions/checkout@v2
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
+    - name: Install composer dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
@@ -32,4 +33,48 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: vendor/bin/phpunit
+      run: php artisan migrate --force
+    - name: Install NPM dependencies
+      run: npm install
+    - name: Minify CSS and JS files
+      run: npm run production
+    # - name: Execute tests (Unit and Feature tests) via PHPUnit
+    #   env:
+    #     DB_CONNECTION: sqlite
+    #     DB_DATABASE: database/database.sqlite
+    #   run: ./vendor/bin/phpunit
+
+  # build:
+
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v2-beta
+  #       with:
+  #         node-version: '12'
+  #         check-latest: true
+  #     - name: Install NPM dependencies
+  #       run: npm install
+  #     - name: Compile assets for production
+  #       run: npm run production
+
+  # deploy:
+
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+  #     - name: Deployment
+  #       uses: appleboy/ssh-action@main
+  #       with:
+  #         host: ${{ secrets.SSH_HOST }}
+  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #         username: ${{ secrets.SSH_USERNAME }}
+  #         script: |
+  #           cd /var/www/html/
+  #           git checkout -f 
+  #           git pull
