--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -10,6 +10,9 @@ jobs:
   laravel-tests:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./src
 
     steps:
     - name: Setup PHP
