test auto deploy

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  laravel-tests:
+  laravel-tests-and-deploy:
 
     runs-on: ubuntu-latest
     defaults:
@@ -46,38 +46,29 @@ jobs:
     #     DB_CONNECTION: sqlite
     #     DB_DATABASE: database/database.sqlite
     #   run: ./vendor/bin/phpunit
-
-  # build:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v2-beta
-  #       with:
-  #         node-version: '12'
-  #         check-latest: true
-  #     - name: Install NPM dependencies
-  #       run: npm install
-  #     - name: Compile assets for production
-  #       run: npm run production
-
-  # deploy:
-
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
-  #     - name: Deployment
-  #       uses: appleboy/ssh-action@main
-  #       with:
-  #         host: ${{ secrets.SSH_HOST }}
-  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         username: ${{ secrets.SSH_USERNAME }}
-  #         script: |
-  #           cd /var/www/html/
-  #           git checkout -f 
-  #           git pull
+    - name: Deployment
+      uses: appleboy/ssh-action@main
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        script: |
+          cd /public_html
+          git checkout -f
+          git pull
+    - name: Upload frontend css on hosting
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        source: "public/css/*"
+        target: "public/css"
+    - name: Upload frontend js on hosting
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        source: "public/js/*"
+        target: "public/js"
