--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -47,7 +47,7 @@ jobs:
     #     DB_DATABASE: database/database.sqlite
     #   run: ./vendor/bin/phpunit
     - name: Deployment
-      uses: appleboy/ssh-action@main
+      uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
