test current dir on deploy

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -53,7 +53,8 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         script: |
-          cd /public_html
+          ls -la
+          cd public_html/
           git checkout -f
           git pull
     - name: Upload frontend css on hosting
