--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 COMPOSE_PROJECT_NAME=shop
-VIRTUAL_HOST=shop.test
+VIRTUAL_HOST=shop.dmitrakovich.dev
 USER_UID=1000
 USER_GID=1000
 
@@ -8,7 +8,7 @@ MYSQL_DATABASE=app
 MYSQL_USER=login
 MYSQL_PASSWORD=pass
 
-HOST_PHPMYADMIN=pma.shop.test
-HOST_PHPREDISADMIN=pra.shop.test
+HOST_PHPMYADMIN=pma.shop.dmitrakovich.dev
+HOST_PHPREDISADMIN=pra.shop.dmitrakovich.dev
 
 SUPERVISOR_STOP_WAIT_SECS=90
