--- a/src/.env.example
+++ b/src/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Barocco
-APP_ENV=production
-APP_KEY=
-APP_DEBUG=false
-APP_URL=https://barocco.by
+APP_ENV=local
+APP_KEY=base64:4vKy6Xn3BAi+h10u/dk7mtOMufHgBBxqtHWd7FRSFAU=
+APP_DEBUG=true
+APP_URL=https://shop.dmitrakovich.dev
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=${COMPOSE_PROJECT_NAME}-mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=app
+DB_USERNAME=login
+DB_PASSWORD=pass
 
 DB_OLD_CONNECTION=old_mysql
 DB_OLD_HOST=
@@ -28,7 +28,7 @@ SESSION_LIFETIME=120
 
 REDIS_CLIENT=phpredis
 REDIS_PREFIX=
-REDIS_HOST=127.0.0.1
+REDIS_HOST=${COMPOSE_PROJECT_NAME}-redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
