--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,5 +48,9 @@ jobs:
     #   run: ./vendor/bin/phpunit
     - name: Deploy
       run: |
+        mkdir -p ~/.ssh
+        touch ~/.ssh/key.pem
+        (echo ${{ secrets.PRIVATE_KEY }} | base64 --decode -i > ~/.ssh/key.pem)
+        chmod 700 ~/.ssh/key.pem
         cd ../.deploy
-        php ./deployer.phar test
+        php ./deployer.phar deploy
