--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -76,3 +76,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: Success deploying 😎
