--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,6 +70,7 @@ jobs:
           cd src/
           composer install --optimize-autoloader --no-dev
           php artisan optimize
+          ls -la
       
     - name: Upload frontend css on hosting
       uses: appleboy/scp-action@master
@@ -79,6 +80,8 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         source: "public/css/*"
         target: "public/css"
+        debug: true
+        script: ls -la
 
     - name: Upload frontend js on hosting
       uses: appleboy/scp-action@master
