--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,7 +70,6 @@ jobs:
           cd src/
           composer install --optimize-autoloader --no-dev
           php artisan optimize
-          ls -la
       
     - name: Upload frontend css on hosting
       uses: appleboy/scp-action@master
@@ -78,10 +77,9 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        source: "public/css/*"
-        target: "public/css"
+        source: "src/public/css/*"
+        target: "test"
         debug: true
-        script: ls -la
 
     - name: Upload frontend js on hosting
       uses: appleboy/scp-action@master
