--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -70,6 +70,7 @@ jobs:
           cd src/
           composer install --optimize-autoloader --no-dev
           php artisan optimize
+          exit
       
     - name: Upload frontend css on hosting
       uses: appleboy/scp-action@master
