--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -56,21 +56,21 @@ jobs:
     #     cd ../.deploy
     #     php ./deployer.phar deploy
 
-    - name: Deploy on stupid hosting
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        debug: true
-        script: |
-          cd ~/public_html
-          git checkout -f
-          git pull
-          cd src/
-          composer install --optimize-autoloader --no-dev
-          php artisan optimize
-          exit
+    # - name: Deploy on stupid hosting
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USERNAME }}
+    #     password: ${{ secrets.PASSWORD }}
+    #     debug: true
+    #     script: |
+    #       cd ~/public_html
+    #       git checkout -f
+    #       git pull
+    #       cd src/
+    #       composer install --optimize-autoloader --no-dev
+    #       php artisan optimize
+    #       exit
       
     - name: Upload frontend css on hosting
       uses: appleboy/scp-action@master
@@ -82,14 +82,14 @@ jobs:
         target: "~/public_html/src/docs"
         debug: true
 
-    - name: Upload frontend js on hosting
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        source: "src/public/js/*"
-        target: "public/js"
+    # - name: Upload frontend js on hosting
+    #   uses: appleboy/scp-action@master
+    #   with:
+    #     host: ${{ secrets.HOST }}
+    #     username: ${{ secrets.USERNAME }}
+    #     password: ${{ secrets.PASSWORD }}
+    #     source: "src/public/js/*"
+    #     target: "public/js"
 
     - name: Send success status
       uses: appleboy/telegram-action@master
