--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -56,21 +56,25 @@ jobs:
     #     cd ../.deploy
     #     php ./deployer.phar deploy
 
-    # - name: Deploy on stupid hosting
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     username: ${{ secrets.USERNAME }}
-    #     password: ${{ secrets.PASSWORD }}
-    #     debug: true
-    #     script: |
-    #       cd ~/public_html
-    #       git checkout -f
-    #       git pull
-    #       cd src/
-    #       composer install --optimize-autoloader --no-dev
-    #       php artisan optimize
-    #       exit
+    - name: Deploy on stupid hosting
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        debug: true
+        script: |
+          cd ~/public_html
+          git checkout -f
+          git pull
+          cd src/
+          composer install --optimize-autoloader --no-dev
+          php artisan optimize
+
+    - name: Sleep for 20 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '20s'
       
     - name: Upload frontend css on hosting
       uses: appleboy/scp-action@master
@@ -80,6 +84,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         source: "src/public/css/*"
         target: "~/public_html/src/docs"
+        strip_components: 3
         debug: true
 
     # - name: Upload frontend js on hosting
