--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -83,18 +83,23 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         source: "src/public/css/*"
-        target: "~/public_html/src/docs"
-        strip_components: 3
+        target: "~/public_html"
+        # strip_components: 3
         debug: true
 
-    # - name: Upload frontend js on hosting
-    #   uses: appleboy/scp-action@master
-    #   with:
-    #     host: ${{ secrets.HOST }}
-    #     username: ${{ secrets.USERNAME }}
-    #     password: ${{ secrets.PASSWORD }}
-    #     source: "src/public/js/*"
-    #     target: "public/js"
+    - name: Sleep for 20 seconds
+      uses: jakejarvis/wait-action@master
+      with:
+        time: '20s'
+
+    - name: Upload frontend js on hosting
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        source: "src/public/js/*"
+        target: "~/public_html"
 
     - name: Send success status
       uses: appleboy/telegram-action@master
