--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -71,10 +71,10 @@ jobs:
           composer install --optimize-autoloader --no-dev
           php artisan optimize
 
-    - name: Sleep for 11 seconds
+    - name: Sleep for 20 seconds
       uses: jakejarvis/wait-action@master
       with:
-        time: '11s'
+        time: '20s'
 
     - name: Upload frontend js on hosting
       uses: appleboy/scp-action@master
@@ -82,21 +82,7 @@ jobs:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
-        source: "src/public/js/*"
-        target: "~/public_html"
-
-    - name: Sleep for 11 seconds
-      uses: jakejarvis/wait-action@master
-      with:
-        time: '11s'
-      
-    - name: Upload frontend css on hosting
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        source: "src/public/css/*"
+        source: "src/public/js/*,src/public/css/*"
         target: "~/public_html"
 
     - name: Send success status
