--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -58,8 +58,6 @@ jobs:
 
     - name: Deploy on stupid hosting
       uses: appleboy/ssh-action@master
-      # id: gitpull
-      # continue-on-error: true
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
@@ -72,13 +70,6 @@ jobs:
           cd src/
           composer install --optimize-autoloader --no-dev
           php artisan optimize
-
-    # - name: retry git pull
-    # - uses: nick-invision/retry@v2
-    #   with:
-    #     timeout_seconds: 90
-    #     max_attempts: 3
-    #     command: dir
 
     - name: Sleep for 20 seconds
       uses: jakejarvis/wait-action@master
@@ -100,3 +91,28 @@ jobs:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
         message: Success deploying 😎
+
+
+
+  ##################################
+  ### Run when a schedule failed ###
+  ##################################
+  restart_when_failed:
+    name: Restarts the scheduled run when it failed
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' && failure()
+    needs: laravel-tests-and-deploy
+    steps:
+      - name: Sleep for 96 seconds
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '96s'
+
+      - name: Retry the workflow
+        run: |
+          curl -i \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.API_WORKFLOW_KEY }}" \
+          https://api.github.com/repos/default-089/shop.test/actions/workflows/11868491/dispatches \
+          -d '{"ref": "${{ github.ref }}" }'
