--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -124,19 +124,19 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: Failure deploy (${{ env.attempt }}) ❌ Rerun 🔄
 
-      - name: Retry the workflow
-        uses: peter-evans/repository-dispatch@v1
-        with:
-          token: ${{ secrets.API_WORKFLOW_KEY }}
-          repository: default-089/shop.test
-          event-type: retry
-          client-payload: '{"ref": "${{ github.ref }}", "attempt": "${{ env.attempt }}"}'
-
       # - name: Retry the workflow
-      #   run: |
-      #     curl -i \
-      #     -X POST \
-      #     -H "Accept: application/vnd.github.v3+json" \
-      #     -H "Authorization: token ${{ secrets.API_WORKFLOW_KEY }}" \
-      #     https://api.github.com/repos/default-089/shop.test/actions/workflows/11868491/dispatches \
-      #     -d '{"ref": "${{ github.ref }}", "client_payload": {"attempt": "${{ env.attempt }}"} }'
+      #   uses: peter-evans/repository-dispatch@v1
+      #   with:
+      #     token: ${{ secrets.API_WORKFLOW_KEY }}
+      #     repository: default-089/shop.test
+      #     event-type: retry
+      #     client-payload: '{"ref": "${{ github.ref }}", "attempt": "${{ env.attempt }}"}'
+
+      - name: Retry the workflow
+        run: |
+          curl -i \
+          -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.API_WORKFLOW_KEY }}" \
+          https://api.github.com/repos/default-089/shop.test/actions/workflows/11868491/dispatches \
+          -d '{"ref": "${{ github.ref }}", "attempt": "${{ env.attempt }}" }'
