--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,6 +17,9 @@ jobs:
         working-directory: ./src
 
     steps:
+    - name: test retry
+      run: |
+        exit 1
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
