--- a/src/composer.json
+++ b/src/composer.json
@@ -26,6 +26,7 @@
         "jenssegers/agent": "^2.6",
         "kalnoy/nestedset": "^5.0",
         "laravel-admin-ext/ckeditor": "^1.0",
+        "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
