another test github workflow part 1

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   repository_dispatch:
-    types: [ retry-1, retry-2, retry-3 ] # [ retry-* ] # check syntax !!!!
+    types: [ retry-* ]
 
 jobs:
   laravel-tests-and-deploy:
@@ -17,6 +17,10 @@ jobs:
         working-directory: ./src
 
     steps:
+    - name: test types syntax
+      run: |
+        exit 1
+
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
@@ -72,6 +76,9 @@ jobs:
           cd src/
           composer install --optimize-autoloader --no-dev
           php artisan optimize
+
+    # err: bash: line 4: composer: command not found
+    # добавить удаление архивов, которые оставляет "appleboy/scp-action"
 
     - name: Sleep for 21 seconds
       uses: jakejarvis/wait-action@master
