another test github workflow part 4

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -19,6 +19,7 @@ jobs:
     steps:
     - name: test types syntax
       run: |
+        echo ${{ toJSON(env) }}
         exit 1
 
     - name: Setup PHP
