--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -110,7 +110,7 @@ jobs:
   restart_when_failed:
     name: Restarts workflow if failed
     runs-on: ubuntu-latest
-    if: failure() && github.event.client_payload.attempt <= ${{ secrets.DEPLOY_MAX_ATTEMPTS }}
+    if: failure() # && github.event.client_payload.attempt <= ${{ secrets.DEPLOY_MAX_ATTEMPTS }}
     needs: laravel-tests-and-deploy
     steps:
       # - name: Sleep for 1m 36s
