--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,9 +8,6 @@ on:
   repository_dispatch:
     types: [ retry-* ]
 
-env:
-  DEPLOY_MAX_ATTEMPTS: 3
-
 jobs:
   laravel-tests-and-deploy:
 
@@ -113,7 +110,7 @@ jobs:
   restart_when_failed:
     name: Restarts workflow if failed
     runs-on: ubuntu-latest
-    if: failure() && github.event.client_payload.attempt <= env.DEPLOY_MAX_ATTEMPTS
+    if: failure() && github.event.client_payload.attempt <= 5
     needs: laravel-tests-and-deploy
     steps:
       # - name: Sleep for 1m 36s
