--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -72,14 +72,12 @@ jobs:
           cd src/
           php ~/.local/bin/composer install --optimize-autoloader --no-dev
           php artisan optimize
+          find ~ -type f -name "*.tar" -exec rm {} \;
 
-    # err: bash: line 4: composer: command not found
-    # добавить удаление архивов, которые оставляет "appleboy/scp-action"
-
-    - name: Sleep for 21 seconds
+    - name: Sleep for 27 seconds
       uses: jakejarvis/wait-action@master
       with:
-        time: '21s'
+        time: '27s'
 
     - name: Upload frontend js & css on hosting
       uses: appleboy/scp-action@master
