--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
         "cropperjs": "^1.5.9",
+        "mustache": "^4.2.0",
         "sortablejs": "^1.14.0"
     }
 }
