--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - docker-proxy
 
   php-cron:
-    image: spurit/php-dev:7.4
+    image: dmitrakovich/php-dev:7.3.29
     container_name: ${COMPOSE_PROJECT_NAME}-cron
     init: true
     entrypoint: ["/opt/entrypoint-cron.sh", "/cron/crontab"]
@@ -69,7 +69,7 @@ services:
       - docker-proxy
 
   php-supervisor:
-    image: spurit/php-dev:7.4
+    image: dmitrakovich/php-dev:7.3.29
     container_name: ${COMPOSE_PROJECT_NAME}-supervisor
     entrypoint: ["/opt/entrypoint-supervisor.sh"]
     stop_grace_period: ${SUPERVISOR_STOP_WAIT_SECS}s
