--- a/src/composer.json
+++ b/src/composer.json
@@ -29,7 +29,6 @@
         "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
         "laravie/serialize-queries": "^1.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^2.7",
@@ -39,6 +38,7 @@
         "barryvdh/laravel-debugbar": "^3.3",
         "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/breeze": "^1.4",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
