--- a/src/composer.json
+++ b/src/composer.json
@@ -32,7 +32,8 @@
         "laravie/serialize-queries": "^1.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^2.7",
-        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3"
+        "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3",
+        "staudenmeir/eloquent-json-relations": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.3",
