--- a/src/composer.json
+++ b/src/composer.json
@@ -28,6 +28,7 @@
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel/framework": "^8.0",
+        "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.0",
         "laravie/serialize-queries": "^1.0",
         "predis/predis": "^1.1",
