--- a/src/composer.json
+++ b/src/composer.json
@@ -11,6 +11,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/default-089/laravel-medialibrary.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/default-089/log-viewer.git"
         }
     ],
     "require": {
@@ -27,7 +31,7 @@
         "kalnoy/nestedset": "^5.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
-        "laravel-admin-ext/log-viewer": "^1.0",
+        "laravel-admin-ext/log-viewer": "v1.0.6",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.0",
