--- a/src/composer.json
+++ b/src/composer.json
@@ -28,6 +28,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "irazasyed/telegram-bot-sdk": "^3.4",
         "jenssegers/agent": "^2.6",
+        "jxlwqq/env-manager": "^0.1.0",
         "kalnoy/nestedset": "^5.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
