--- a/src/composer.json
+++ b/src/composer.json
@@ -32,6 +32,7 @@
         "kalnoy/nestedset": "^5.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
+        "laravel-admin-ext/helpers": "^2.0",
         "laravel-admin-ext/log-viewer": "v1.0.6",
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.12",
