update git path

--- a/src/composer.json
+++ b/src/composer.json
@@ -10,16 +10,16 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://github.com/default-089/laravel-medialibrary.git"
+            "url": "https://github.com/dmitrakovich/laravel-medialibrary.git"
         },
         {
             "type": "vcs",
-            "url": "https://github.com/default-089/log-viewer.git"
+            "url": "https://github.com/dmitrakovich/log-viewer.git"
         }
     ],
     "require": {
         "php": "^7.3",
-        "default-089/sxgeo": "0.16.*@dev",
+        "dmitrakovich/sxgeo": "0.16.*@dev",
         "diglactic/laravel-breadcrumbs": "^6.0",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.8",
