update composer packages

--- a/src/composer.json
+++ b/src/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.3",
-        "dmitrakovich/sxgeo": "0.16.*@dev",
+        "default-089/sxgeo": "0.16.*@dev",
         "diglactic/laravel-breadcrumbs": "^6.0",
         "drandin/declension-nouns": "dev-master",
         "encore/laravel-admin": "^1.8",
@@ -29,12 +29,12 @@
         "irazasyed/telegram-bot-sdk": "^3.4",
         "jenssegers/agent": "^2.6",
         "jxlwqq/env-manager": "^0.1.0",
-        "kalnoy/nestedset": "^5.0",
+        "kalnoy/nestedset": "^6.0",
         "laravel-admin-ext/ckeditor": "^1.0",
         "laravel-admin-ext/grid-sortable": "^1.1",
         "laravel-admin-ext/helpers": "^2.0",
         "laravel-admin-ext/log-viewer": "v1.0.6",
-        "laravel/framework": "^8.0",
+        "laravel/framework": "^8.81",
         "laravel/sanctum": "^2.12",
         "laravel/tinker": "^2.0",
         "laravie/serialize-queries": "^1.0",
