--- a/src/composer.json
+++ b/src/composer.json
@@ -40,6 +40,7 @@
         "laravie/serialize-queries": "^1.0",
         "predis/predis": "^1.1",
         "sentry/sentry-laravel": "^2.9",
+        "spatie/laravel-googletagmanager": "^2.6",
         "spatie/laravel-medialibrary": "dev-downgrade-to-php-7.3",
         "staudenmeir/eloquent-json-relations": "^1.5"
     },
