--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,7 @@
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
-        "laravel-mix": "^6.0.31",
+        "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
         "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.2",
@@ -30,6 +30,7 @@
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
         "cropperjs": "^1.5.9",
+        "libphonenumber-js": "^1.9.49",
         "mustache": "^4.2.0",
         "recaptcha-v3": "^1.10.0",
         "sortablejs": "^1.14.0"
