format phones in DB

--- a/src/composer.json
+++ b/src/composer.json
@@ -25,6 +25,7 @@
         "encore/laravel-admin": "^1.8",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
+        "giggsey/libphonenumber-for-php": "^8.12",
         "guzzlehttp/guzzle": "^7.0.1",
         "irazasyed/telegram-bot-sdk": "^3.4",
         "jenssegers/agent": "^2.6",
